/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.8/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use JUnit Jupiter for testing.
    testImplementation libs.junit.jupiter

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // This dependency is used by the application.
    implementation libs.guava

    implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

application {
    // Define the main class for the application.
    // mainClass = 'rpg.App' // Removed to allow all samples to compile and run individually.
    if (project.hasProperty('mainClass')) {
        mainClass = project.getProperty('mainClass')
    } else {
        // Default main class if none is specified, or for the 'run' task without -PmainClass
        // You might want to set a default here, or leave it commented if you always expect -PmainClass
        // mainClass = 'rpg.App'
    }
}



tasks.named('run') {
    standardInput = System.in
    //logging.level = LogLevel.QUIET
}

tasks.withType(JavaCompile) {
    options.compilerArgs << '-Xlint:unchecked'
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}
